--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -184,3 +184,15 @@ button:disabled {
     font-weight: 300;
     padding: 12px 24px 0 24px;
 }
+.download-button{
+	padding: 5px 10px;
+    background: #dfdfdf;
+    border-radius: 10px;
+    border: 1px solid #CCC;
+    cursor: pointer;
+	margin: 0px 10px;
+}
+.info-container{
+	display: flex;
+    align-items: center;
+}
